fixed top bar spacing

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 3.125vw;
+  height: 6rem;
   background: #FFF;
   border-bottom: 1px solid #000;
   z-index: 100;
@@ -63,7 +63,7 @@ h1, h2, h3, h4, h5, h6 {
       width: 100%; }
 
 #students {
-  margin-top: 3.125vw;
+  margin-top: 6rem;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 1px; }
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6 {
     position: fixed;
     grid-template-columns: repeat(43, 1fr);
     bottom: 0;
-    z-index: 11;
+    z-index: 16;
     width: calc(10vw * 43); }
 
 #student {
@@ -185,8 +185,8 @@ h1, h2, h3, h4, h5, h6 {
   background: white;
   border-left: 1px solid #000;
   width: 20vw;
-  height: 96.875vh;
-  top: 3.125vw;
+  height: calc(100vh-6rem);
+  top: 6rem;
   right: 0;
   opacity: 0;
   pointer-events: none;
