--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -23,7 +23,7 @@
     position:fixed; 
     top:0;
     width:100%;
-    height:3.125vw;
+    height:6rem;
     background:#FFF;
     border-bottom:1px solid #000;
     z-index:100;
@@ -51,7 +51,7 @@
 // this is the big grid
 
 #students {
-    margin-top:3.125vw;
+    margin-top:6rem;
     display:grid;
     grid-template-columns:repeat(5, 1fr);
     grid-gap:1px;
@@ -61,7 +61,7 @@
         grid-template-columns: repeat(43, 1fr);
         bottom: 0;
         // top: 38.25vw;
-        z-index: 11;
+        z-index: 16;
         width: calc(10vw * 43);
     }
 
@@ -235,8 +235,8 @@ top: 3.5vw;
     background: white;
     border-left: 1px solid #000;
     width: 20vw;
-    height:96.875vh;
-    top: 3.125vw;
+    height:calc(100vh-6rem);
+    top: 6rem;
     right: 0;
     opacity:0;
     pointer-events: none;
